fix method params

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:35:21.336664Z",
-     "start_time": "2025-06-02T20:35:21.281359Z"
+     "end_time": "2025-06-02T21:11:15.187491Z",
+     "start_time": "2025-06-02T21:11:15.138907Z"
     }
    },
    "source": [
@@ -24,8 +24,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:35:22.034678Z",
-     "start_time": "2025-06-02T20:35:21.973946Z"
+     "end_time": "2025-06-02T21:11:16.931162Z",
+     "start_time": "2025-06-02T21:11:16.867143Z"
     }
    },
    "source": [
@@ -45,8 +45,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:35:28.776034Z",
-     "start_time": "2025-06-02T20:35:27.704304Z"
+     "end_time": "2025-06-02T21:11:19.171123Z",
+     "start_time": "2025-06-02T21:11:18.316420Z"
     }
    },
    "source": [
@@ -63,8 +63,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:44:08.980190Z",
-     "start_time": "2025-06-02T20:44:08.941840Z"
+     "end_time": "2025-06-02T21:11:19.797097Z",
+     "start_time": "2025-06-02T21:11:19.767569Z"
     }
    },
    "source": [
@@ -84,7 +84,7 @@
     "tuningconfig = load_config(Path('config') / 'CONFIG_TUNING.yaml')\n"
    ],
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -131,8 +131,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:44:10.597479Z",
-     "start_time": "2025-06-02T20:44:10.567984Z"
+     "end_time": "2025-06-02T21:12:24.191090Z",
+     "start_time": "2025-06-02T21:12:24.163719Z"
     }
    },
    "cell_type": "code",
@@ -153,14 +153,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Experiment created at:  2025-06-02-22-44\n",
+      "Experiment created at:  2025-06-02-23-12\n",
       "Task: pd\n",
       "Dataset: 01_gmsc\n",
       "CV splits:  3\n"
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -168,8 +168,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:44:12.465912Z",
-     "start_time": "2025-06-02T20:44:12.201690Z"
+     "end_time": "2025-06-02T21:12:25.881318Z",
+     "start_time": "2025-06-02T21:12:25.624347Z"
     }
    },
    "source": [
@@ -191,7 +191,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cross-validation loop:: 100%|██████████| 3/3 [00:00<00:00, 16.40it/s]"
+      "Cross-validation loop:: 100%|██████████| 3/3 [00:00<00:00, 17.44it/s]"
      ]
     },
     {
@@ -199,14 +199,12 @@
      "output_type": "stream",
      "text": [
       "- Omitting rows with missing values: 6042 rows left out\n",
+      "---- Tuning dt ----\n",
       "*Selected hyperparameters (dt)* {'criterion': 'gini', 'max_depth': 10}\n",
+      "---- Tuning lr ----\n",
       "*Selected hyperparameters (lr)* {'penalty': 'l2', 'C': 0.1}\n",
       "- Omitting rows with missing values: 6042 rows left out\n",
-      "*Selected hyperparameters (dt)* {'criterion': 'gini', 'max_depth': 10}\n",
-      "*Selected hyperparameters (lr)* {'penalty': 'l2', 'C': 0.1}\n",
-      "- Omitting rows with missing values: 6042 rows left out\n",
-      "*Selected hyperparameters (dt)* {'criterion': 'gini', 'max_depth': 10}\n",
-      "*Selected hyperparameters (lr)* {'penalty': 'l2', 'C': 0.1}\n"
+      "- Omitting rows with missing values: 6042 rows left out\n"
      ]
     },
     {
@@ -217,7 +215,7 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -225,8 +223,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T20:44:18.075482Z",
-     "start_time": "2025-06-02T20:44:18.044607Z"
+     "end_time": "2025-06-02T21:12:30.165266Z",
+     "start_time": "2025-06-02T21:12:30.139960Z"
     }
    },
    "source": [
@@ -286,12 +284,12 @@
        "   'aucpr': 0.12294}}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 9
   },
   {
    "cell_type": "code",
