add README.md, relocate data loading

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T21:11:15.187491Z",
-     "start_time": "2025-06-02T21:11:15.138907Z"
+     "end_time": "2025-06-02T21:43:01.143177Z",
+     "start_time": "2025-06-02T21:43:01.086792Z"
     }
    },
    "source": [
@@ -24,8 +24,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T21:11:16.931162Z",
-     "start_time": "2025-06-02T21:11:16.867143Z"
+     "end_time": "2025-06-02T21:43:03.114956Z",
+     "start_time": "2025-06-02T21:43:03.057089Z"
     }
    },
    "source": [
@@ -45,8 +45,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T21:11:19.171123Z",
-     "start_time": "2025-06-02T21:11:18.316420Z"
+     "end_time": "2025-06-02T21:43:05.251237Z",
+     "start_time": "2025-06-02T21:43:04.451553Z"
     }
    },
    "source": [
@@ -63,8 +63,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T21:11:19.797097Z",
-     "start_time": "2025-06-02T21:11:19.767569Z"
+     "end_time": "2025-06-02T21:44:44.919413Z",
+     "start_time": "2025-06-02T21:44:44.879019Z"
     }
    },
    "source": [
@@ -84,7 +84,7 @@
     "tuningconfig = load_config(Path('config') / 'CONFIG_TUNING.yaml')\n"
    ],
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -131,8 +131,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T21:12:24.191090Z",
-     "start_time": "2025-06-02T21:12:24.163719Z"
+     "end_time": "2025-06-02T21:44:47.273669Z",
+     "start_time": "2025-06-02T21:44:47.249681Z"
     }
    },
    "cell_type": "code",
@@ -153,23 +153,25 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Experiment created at:  2025-06-02-23-12\n",
+      "Experiment created at:  2025-06-02-23-44\n",
       "Task: pd\n",
       "Dataset: 01_gmsc\n",
       "CV splits:  3\n"
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "id": "57033baf67309b3f",
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2025-06-02T21:12:25.881318Z",
-     "start_time": "2025-06-02T21:12:25.624347Z"
+     "start_time": "2025-06-02T21:44:48.522694Z"
     }
    },
    "source": [
@@ -191,7 +193,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cross-validation loop:: 100%|██████████| 3/3 [00:00<00:00, 17.44it/s]"
+      "Cross-validation loop::   0%|          | 0/3 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -203,19 +205,12 @@
       "*Selected hyperparameters (dt)* {'criterion': 'gini', 'max_depth': 10}\n",
       "---- Tuning lr ----\n",
       "*Selected hyperparameters (lr)* {'penalty': 'l2', 'C': 0.1}\n",
-      "- Omitting rows with missing values: 6042 rows left out\n",
-      "- Omitting rows with missing values: 6042 rows left out\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "---- Tuning tabpfn ----\n",
+      "*Selected hyperparameters (tabpfn)* {'device': 'auto', 'ignore_pretraining_limits': False}\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": null
   },
   {
    "cell_type": "code",
