Add support for tuning configuration in experiment framework
Integrated a new `--tuning` argument and associated configuration handling in `main.py`. Updated the experiment initialization to include tuning settings and ensured proper backup for the tuning config file. Adjusted the notebook to reflect these changes, allowing for hyperparameter tuning during experiments.

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -167,10 +167,8 @@
    "id": "57033baf67309b3f",
    "metadata": {
     "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
+     "end_time": "2025-06-02T22:25:58.619363Z",
      "start_time": "2025-06-02T21:44:48.522694Z"
     }
    },
@@ -208,9 +206,44 @@
       "---- Tuning tabpfn ----\n",
       "*Selected hyperparameters (tabpfn)* {'device': 'auto', 'ignore_pretraining_limits': False}\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation loop::  33%|███▎      | 1/3 [13:41<27:23, 821.72s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Omitting rows with missing values: 6042 rows left out\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation loop::  67%|██████▋   | 2/3 [26:50<13:22, 802.55s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Omitting rows with missing values: 6042 rows left out\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation loop:: 100%|██████████| 3/3 [41:09<00:00, 823.31s/it]\n"
+     ]
     }
    ],
-   "execution_count": null
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -218,8 +251,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T21:12:30.165266Z",
-     "start_time": "2025-06-02T21:12:30.139960Z"
+     "end_time": "2025-06-02T22:30:43.537826Z",
+     "start_time": "2025-06-02T22:30:43.159628Z"
     }
    },
    "source": [
@@ -276,15 +309,39 @@
        "   'recall': 0.0,\n",
        "   'h_measure': 0.08102,\n",
        "   'aucroc': 0.64566,\n",
-       "   'aucpr': 0.12294}}}"
+       "   'aucpr': 0.12294}},\n",
+       " 'tabpfn': {0: {'accuracy': 0.93874,\n",
+       "   'brier': 0.0496,\n",
+       "   'f1': 0.33829,\n",
+       "   'precision': 0.5814,\n",
+       "   'recall': 0.23855,\n",
+       "   'h_measure': 0.38596,\n",
+       "   'aucroc': 0.83653,\n",
+       "   'aucpr': 0.37512},\n",
+       "  1: {'accuracy': 0.93192,\n",
+       "   'brier': 0.05415,\n",
+       "   'f1': 0.25069,\n",
+       "   'precision': 0.62329,\n",
+       "   'recall': 0.1569,\n",
+       "   'h_measure': 0.41503,\n",
+       "   'aucroc': 0.84401,\n",
+       "   'aucpr': 0.39894},\n",
+       "  2: {'accuracy': 0.93875,\n",
+       "   'brier': 0.04837,\n",
+       "   'f1': 0.29233,\n",
+       "   'precision': 0.56425,\n",
+       "   'recall': 0.19727,\n",
+       "   'h_measure': 0.40561,\n",
+       "   'aucroc': 0.84928,\n",
+       "   'aucpr': 0.38689}}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 10
   },
   {
    "cell_type": "code",
