--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T21:43:01.143177Z",
-     "start_time": "2025-06-02T21:43:01.086792Z"
+     "end_time": "2025-06-03T11:32:18.299428Z",
+     "start_time": "2025-06-03T11:32:18.238573Z"
     }
    },
    "source": [
@@ -24,8 +24,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T21:43:03.114956Z",
-     "start_time": "2025-06-02T21:43:03.057089Z"
+     "end_time": "2025-06-03T11:32:18.860329Z",
+     "start_time": "2025-06-03T11:32:18.798388Z"
     }
    },
    "source": [
@@ -45,8 +45,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T21:43:05.251237Z",
-     "start_time": "2025-06-02T21:43:04.451553Z"
+     "end_time": "2025-06-03T11:32:21.403708Z",
+     "start_time": "2025-06-03T11:32:20.497758Z"
     }
    },
    "source": [
@@ -63,8 +63,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T21:44:44.919413Z",
-     "start_time": "2025-06-02T21:44:44.879019Z"
+     "end_time": "2025-06-03T12:07:00.073683Z",
+     "start_time": "2025-06-03T12:06:59.989758Z"
     }
    },
    "source": [
@@ -84,7 +84,7 @@
     "tuningconfig = load_config(Path('config') / 'CONFIG_TUNING.yaml')\n"
    ],
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 21
   },
   {
    "metadata": {},
@@ -95,44 +95,10 @@
    "id": "722be1afbd36901d"
   },
   {
-   "cell_type": "code",
-   "id": "d7ada7e1194abf9b",
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-05-26T18:23:53.353864Z",
-     "start_time": "2025-05-26T18:23:53.329466Z"
-    }
-   },
-   "source": [
-    "from src.classes.deprecated.experiment_deprecated import Experiment\n",
-    "\n",
-    "# Initialize experiment object\n",
-    "experiment = Experiment(dataconfig=dataconfig,\n",
-    "                        experimentconfig=experimentconfig,\n",
-    "                        methodconfig=methodconfig,\n",
-    "                        evaluationconfig=evaluationconfig)\n"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Experiment created at:  2025-05-26-20-23\n",
-      "Task: pd\n",
-      "Dataset: 01_gmsc\n",
-      "CV splits:  3\n"
-     ]
-    }
-   ],
-   "execution_count": 11
-  },
-  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-02T21:44:47.273669Z",
-     "start_time": "2025-06-02T21:44:47.249681Z"
+     "end_time": "2025-06-03T12:07:01.506616Z",
+     "start_time": "2025-06-03T12:07:01.482576Z"
     }
    },
    "cell_type": "code",
@@ -153,14 +119,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Experiment created at:  2025-06-02-23-44\n",
+      "Experiment created at:  2025-06-03-14-07\n",
       "Task: pd\n",
       "Dataset: 01_gmsc\n",
       "CV splits:  3\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 22
   },
   {
    "cell_type": "code",
@@ -168,8 +134,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T22:25:58.619363Z",
-     "start_time": "2025-06-02T21:44:48.522694Z"
+     "end_time": "2025-06-03T12:07:08.782150Z",
+     "start_time": "2025-06-03T12:07:02.919615Z"
     }
    },
    "source": [
@@ -191,7 +157,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cross-validation loop::   0%|          | 0/3 [00:00<?, ?it/s]"
+      "Cross-validation loop::   0%|          | 0/3 [00:00<?, ?it/s][I 2025-06-03 14:07:03,004] A new study created in memory with name: no-name-5ed62f00-bf88-47bb-9cdc-8a2d4c8acda3\n",
+      "[I 2025-06-03 14:07:03,012] Trial 0 finished with value: 0.5 and parameters: {'C': 0.008174795497570055, 'penalty': 'l1'}. Best is trial 0 with value: 0.5.\n",
+      "[I 2025-06-03 14:07:03,048] Trial 1 finished with value: 0.6889055102256245 and parameters: {'C': 34.24499260464794, 'penalty': 'l2'}. Best is trial 1 with value: 0.6889055102256245.\n",
+      "[I 2025-06-03 14:07:03,062] Trial 2 finished with value: 0.6221953326895483 and parameters: {'C': 0.037869531371921505, 'penalty': 'l2'}. Best is trial 1 with value: 0.6889055102256245.\n",
+      "[I 2025-06-03 14:07:03,075] Trial 3 finished with value: 0.6896373431751629 and parameters: {'C': 37.08053612319896, 'penalty': 'l2'}. Best is trial 3 with value: 0.6896373431751629.\n",
+      "[I 2025-06-03 14:07:03,085] Trial 4 finished with value: 0.5 and parameters: {'C': 0.005075325360717938, 'penalty': 'l1'}. Best is trial 3 with value: 0.6896373431751629.\n",
+      "[I 2025-06-03 14:07:03,107] Trial 5 finished with value: 0.6936271155958855 and parameters: {'C': 62.40446287852889, 'penalty': 'l2'}. Best is trial 5 with value: 0.6936271155958855.\n",
+      "[I 2025-06-03 14:07:03,127] Trial 6 finished with value: 0.694297860653142 and parameters: {'C': 70.04706945391602, 'penalty': 'l2'}. Best is trial 6 with value: 0.694297860653142.\n",
+      "[I 2025-06-03 14:07:03,138] Trial 7 finished with value: 0.6681820536478756 and parameters: {'C': 8.298921292143321, 'penalty': 'l2'}. Best is trial 6 with value: 0.694297860653142.\n",
+      "[I 2025-06-03 14:07:03,157] Trial 8 finished with value: 0.6786586271742403 and parameters: {'C': 15.623756304165413, 'penalty': 'l2'}. Best is trial 6 with value: 0.694297860653142.\n",
+      "[I 2025-06-03 14:07:03,168] Trial 9 finished with value: 0.614091412899417 and parameters: {'C': 0.0022418048736892165, 'penalty': 'l2'}. Best is trial 6 with value: 0.694297860653142.\n"
      ]
     },
     {
@@ -199,19 +175,74 @@
      "output_type": "stream",
      "text": [
       "- Omitting rows with missing values: 6042 rows left out\n",
-      "---- Tuning dt ----\n",
-      "*Selected hyperparameters (dt)* {'criterion': 'gini', 'max_depth': 10}\n",
-      "---- Tuning lr ----\n",
-      "*Selected hyperparameters (lr)* {'penalty': 'l2', 'C': 0.1}\n",
-      "---- Tuning tabpfn ----\n",
-      "*Selected hyperparameters (tabpfn)* {'device': 'auto', 'ignore_pretraining_limits': False}\n"
+      "---- Tuning lr ----\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cross-validation loop::  33%|███▎      | 1/3 [13:41<27:23, 821.72s/it]"
+      "[I 2025-06-03 14:07:03,193] Trial 10 finished with value: 0.6844154279671122 and parameters: {'C': 1.7927809957306413, 'penalty': 'l1'}. Best is trial 6 with value: 0.694297860653142.\n",
+      "[I 2025-06-03 14:07:03,216] Trial 11 finished with value: 0.6433793919751034 and parameters: {'C': 1.0140246984319483, 'penalty': 'l2'}. Best is trial 6 with value: 0.694297860653142.\n",
+      "[I 2025-06-03 14:07:03,251] Trial 12 finished with value: 0.6940410471539884 and parameters: {'C': 67.72573985132641, 'penalty': 'l2'}. Best is trial 6 with value: 0.694297860653142.\n",
+      "[I 2025-06-03 14:07:03,269] Trial 13 finished with value: 0.6318091008253218 and parameters: {'C': 0.19531511808803986, 'penalty': 'l2'}. Best is trial 6 with value: 0.694297860653142.\n",
+      "[I 2025-06-03 14:07:03,317] Trial 14 finished with value: 0.690004725759347 and parameters: {'C': 3.4764497659548352, 'penalty': 'l1'}. Best is trial 6 with value: 0.694297860653142.\n",
+      "[I 2025-06-03 14:07:03,351] Trial 15 finished with value: 0.6344556726705476 and parameters: {'C': 0.2921195830836775, 'penalty': 'l2'}. Best is trial 6 with value: 0.694297860653142.\n",
+      "[I 2025-06-03 14:07:03,396] Trial 16 finished with value: 0.6960806497015002 and parameters: {'C': 98.58173124269797, 'penalty': 'l2'}. Best is trial 16 with value: 0.6960806497015002.\n",
+      "[I 2025-06-03 14:07:03,420] Trial 17 finished with value: 0.6687870681330367 and parameters: {'C': 8.606164027913739, 'penalty': 'l2'}. Best is trial 16 with value: 0.6960806497015002.\n",
+      "[I 2025-06-03 14:07:03,476] Trial 18 finished with value: 0.6999191685009325 and parameters: {'C': 90.88477599845123, 'penalty': 'l1'}. Best is trial 18 with value: 0.6999191685009325.\n",
+      "[I 2025-06-03 14:07:03,496] Trial 19 finished with value: 0.6153147590302566 and parameters: {'C': 0.055887296271253155, 'penalty': 'l1'}. Best is trial 18 with value: 0.6999191685009325.\n",
+      "[I 2025-06-03 14:07:03,546] A new study created in memory with name: no-name-ae0d6ac1-2e53-4332-9f88-f97bfbfcb413\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*Best hyperparameters (lr)* {'C': 90.88477599845123, 'penalty': 'l1'}\n",
+      "---- Tuning rf ----\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[I 2025-06-03 14:07:04,258] Trial 0 finished with value: 0.8293523168438379 and parameters: {'n_estimators': 99, 'max_depth': 26}. Best is trial 0 with value: 0.8293523168438379.\n",
+      "[I 2025-06-03 14:07:04,522] Trial 1 finished with value: 0.8141449747633699 and parameters: {'n_estimators': 43, 'max_depth': 23}. Best is trial 0 with value: 0.8293523168438379.\n",
+      "[I 2025-06-03 14:07:04,692] Trial 2 finished with value: 0.8524976639989992 and parameters: {'n_estimators': 39, 'max_depth': 10}. Best is trial 2 with value: 0.8524976639989992.\n",
+      "[I 2025-06-03 14:07:05,205] Trial 3 finished with value: 0.8279339781608341 and parameters: {'n_estimators': 91, 'max_depth': 32}. Best is trial 2 with value: 0.8524976639989992.\n",
+      "[I 2025-06-03 14:07:05,306] Trial 4 finished with value: 0.8125843012913492 and parameters: {'n_estimators': 17, 'max_depth': 18}. Best is trial 2 with value: 0.8524976639989992.\n",
+      "[I 2025-06-03 14:07:05,391] Trial 5 finished with value: 0.8495846267676392 and parameters: {'n_estimators': 22, 'max_depth': 8}. Best is trial 2 with value: 0.8524976639989992.\n",
+      "[I 2025-06-03 14:07:05,691] Trial 6 finished with value: 0.821358966138737 and parameters: {'n_estimators': 53, 'max_depth': 26}. Best is trial 2 with value: 0.8524976639989992.\n",
+      "[I 2025-06-03 14:07:05,717] Trial 7 finished with value: 0.8357933020302685 and parameters: {'n_estimators': 23, 'max_depth': 1}. Best is trial 2 with value: 0.8524976639989992.\n",
+      "[I 2025-06-03 14:07:05,798] Trial 8 finished with value: 0.8519478729684611 and parameters: {'n_estimators': 24, 'max_depth': 7}. Best is trial 2 with value: 0.8524976639989992.\n",
+      "[I 2025-06-03 14:07:06,310] Trial 9 finished with value: 0.8299678384464713 and parameters: {'n_estimators': 89, 'max_depth': 24}. Best is trial 2 with value: 0.8524976639989992.\n",
+      "[I 2025-06-03 14:07:06,680] Trial 10 finished with value: 0.8454142785373311 and parameters: {'n_estimators': 72, 'max_depth': 13}. Best is trial 2 with value: 0.8524976639989992.\n",
+      "[I 2025-06-03 14:07:06,794] Trial 11 finished with value: 0.8541324981722502 and parameters: {'n_estimators': 38, 'max_depth': 6}. Best is trial 11 with value: 0.8541324981722502.\n",
+      "[I 2025-06-03 14:07:06,837] Trial 12 finished with value: 0.8407483853248312 and parameters: {'n_estimators': 41, 'max_depth': 1}. Best is trial 11 with value: 0.8541324981722502.\n",
+      "[I 2025-06-03 14:07:06,989] Trial 13 finished with value: 0.8492220090390532 and parameters: {'n_estimators': 38, 'max_depth': 9}. Best is trial 11 with value: 0.8541324981722502.\n",
+      "[I 2025-06-03 14:07:07,314] Trial 14 finished with value: 0.8437207999874892 and parameters: {'n_estimators': 63, 'max_depth': 13}. Best is trial 11 with value: 0.8541324981722502.\n",
+      "[I 2025-06-03 14:07:07,346] Trial 15 finished with value: 0.8473781320984131 and parameters: {'n_estimators': 10, 'max_depth': 5}. Best is trial 11 with value: 0.8541324981722502.\n",
+      "[I 2025-06-03 14:07:07,526] Trial 16 finished with value: 0.8398932770086676 and parameters: {'n_estimators': 34, 'max_depth': 13}. Best is trial 11 with value: 0.8541324981722502.\n",
+      "[I 2025-06-03 14:07:07,844] Trial 17 finished with value: 0.8307283827053824 and parameters: {'n_estimators': 55, 'max_depth': 18}. Best is trial 11 with value: 0.8541324981722502.\n",
+      "[I 2025-06-03 14:07:07,972] Trial 18 finished with value: 0.8563326397006791 and parameters: {'n_estimators': 51, 'max_depth': 5}. Best is trial 18 with value: 0.8563326397006791.\n",
+      "[I 2025-06-03 14:07:08,122] Trial 19 finished with value: 0.8552205957095773 and parameters: {'n_estimators': 71, 'max_depth': 4}. Best is trial 18 with value: 0.8563326397006791.\n",
+      "Cross-validation loop::  33%|███▎      | 1/3 [00:05<00:10,  5.26s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*Best hyperparameters (rf)* {'n_estimators': 51, 'max_depth': 5}\n",
+      "- Omitting rows with missing values: 6042 rows left out\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation loop::  67%|██████▋   | 2/3 [00:05<00:02,  2.29s/it]"
      ]
     },
     {
@@ -225,25 +256,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cross-validation loop::  67%|██████▋   | 2/3 [26:50<13:22, 802.55s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- Omitting rows with missing values: 6042 rows left out\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Cross-validation loop:: 100%|██████████| 3/3 [41:09<00:00, 823.31s/it]\n"
+      "Cross-validation loop:: 100%|██████████| 3/3 [00:05<00:00,  1.93s/it]\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 23
   },
   {
    "cell_type": "code",
@@ -251,8 +268,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-02T22:30:43.537826Z",
-     "start_time": "2025-06-02T22:30:43.159628Z"
+     "end_time": "2025-06-03T12:07:17.629953Z",
+     "start_time": "2025-06-03T12:07:17.603676Z"
     }
    },
    "source": [
@@ -262,86 +279,62 @@
     {
      "data": {
       "text/plain": [
-       "{'dt': {0: {'accuracy': 0.92622,\n",
-       "   'brier': 0.06837,\n",
-       "   'f1': 0.3046,\n",
-       "   'precision': 0.39938,\n",
-       "   'recall': 0.24618,\n",
-       "   'h_measure': 0.23231,\n",
-       "   'aucroc': 0.65479,\n",
-       "   'aucpr': 0.21359},\n",
-       "  1: {'accuracy': 0.92191,\n",
-       "   'brier': 0.07259,\n",
-       "   'f1': 0.27945,\n",
-       "   'precision': 0.42308,\n",
-       "   'recall': 0.20862,\n",
-       "   'h_measure': 0.24365,\n",
-       "   'aucroc': 0.66588,\n",
-       "   'aucpr': 0.23008},\n",
-       "  2: {'accuracy': 0.92598,\n",
-       "   'brier': 0.06779,\n",
-       "   'f1': 0.29893,\n",
-       "   'precision': 0.38066,\n",
-       "   'recall': 0.24609,\n",
-       "   'h_measure': 0.22213,\n",
-       "   'aucroc': 0.65239,\n",
-       "   'aucpr': 0.20387}},\n",
-       " 'lr': {0: {'accuracy': 0.93436,\n",
-       "   'brier': 0.06053,\n",
-       "   'f1': 0.0,\n",
-       "   'precision': 0.0,\n",
-       "   'recall': 0.0,\n",
-       "   'h_measure': 0.05902,\n",
-       "   'aucroc': 0.62487,\n",
-       "   'aucpr': 0.10811},\n",
-       "  1: {'accuracy': 0.92742,\n",
-       "   'brier': 0.06654,\n",
-       "   'f1': 0.0,\n",
-       "   'precision': 0.0,\n",
-       "   'recall': 0.0,\n",
-       "   'h_measure': 0.05911,\n",
-       "   'aucroc': 0.63109,\n",
-       "   'aucpr': 0.1199},\n",
-       "  2: {'accuracy': 0.93587,\n",
-       "   'brier': 0.05915,\n",
-       "   'f1': 0.0,\n",
-       "   'precision': 0.0,\n",
-       "   'recall': 0.0,\n",
-       "   'h_measure': 0.08102,\n",
-       "   'aucroc': 0.64566,\n",
-       "   'aucpr': 0.12294}},\n",
-       " 'tabpfn': {0: {'accuracy': 0.93874,\n",
-       "   'brier': 0.0496,\n",
-       "   'f1': 0.33829,\n",
-       "   'precision': 0.5814,\n",
-       "   'recall': 0.23855,\n",
-       "   'h_measure': 0.38596,\n",
-       "   'aucroc': 0.83653,\n",
-       "   'aucpr': 0.37512},\n",
-       "  1: {'accuracy': 0.93192,\n",
-       "   'brier': 0.05415,\n",
-       "   'f1': 0.25069,\n",
-       "   'precision': 0.62329,\n",
-       "   'recall': 0.1569,\n",
-       "   'h_measure': 0.41503,\n",
-       "   'aucroc': 0.84401,\n",
-       "   'aucpr': 0.39894},\n",
-       "  2: {'accuracy': 0.93875,\n",
-       "   'brier': 0.04837,\n",
-       "   'f1': 0.29233,\n",
-       "   'precision': 0.56425,\n",
-       "   'recall': 0.19727,\n",
-       "   'h_measure': 0.40561,\n",
-       "   'aucroc': 0.84928,\n",
-       "   'aucpr': 0.38689}}}"
+       "{'lr': {0: {'accuracy': 0.93436,\n",
+       "   'brier': 0.05806,\n",
+       "   'f1': 0.03676,\n",
+       "   'precision': 0.5,\n",
+       "   'recall': 0.01908,\n",
+       "   'h_measure': 0.17245,\n",
+       "   'aucroc': 0.69407,\n",
+       "   'aucpr': 0.19982},\n",
+       "  1: {'accuracy': 0.93005,\n",
+       "   'brier': 0.05925,\n",
+       "   'f1': 0.1169,\n",
+       "   'precision': 0.69811,\n",
+       "   'recall': 0.06379,\n",
+       "   'h_measure': 0.31219,\n",
+       "   'aucroc': 0.78397,\n",
+       "   'aucpr': 0.32509},\n",
+       "  2: {'accuracy': 0.93625,\n",
+       "   'brier': 0.05659,\n",
+       "   'f1': 0.05566,\n",
+       "   'precision': 0.55556,\n",
+       "   'recall': 0.0293,\n",
+       "   'h_measure': 0.17892,\n",
+       "   'aucroc': 0.68214,\n",
+       "   'aucpr': 0.19852}},\n",
+       " 'rf': {0: {'accuracy': 0.93749,\n",
+       "   'brier': 0.0497,\n",
+       "   'f1': 0.2016,\n",
+       "   'precision': 0.62376,\n",
+       "   'recall': 0.12023,\n",
+       "   'h_measure': 0.3888,\n",
+       "   'aucroc': 0.84147,\n",
+       "   'aucpr': 0.36833},\n",
+       "  1: {'accuracy': 0.9318,\n",
+       "   'brier': 0.0547,\n",
+       "   'f1': 0.2067,\n",
+       "   'precision': 0.66355,\n",
+       "   'recall': 0.12241,\n",
+       "   'h_measure': 0.39922,\n",
+       "   'aucroc': 0.84525,\n",
+       "   'aucpr': 0.38233},\n",
+       "  2: {'accuracy': 0.93838,\n",
+       "   'brier': 0.04824,\n",
+       "   'f1': 0.19344,\n",
+       "   'precision': 0.60204,\n",
+       "   'recall': 0.11523,\n",
+       "   'h_measure': 0.42272,\n",
+       "   'aucroc': 0.85446,\n",
+       "   'aucpr': 0.38777}}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 24
   },
   {
    "cell_type": "code",
