adding class imbalance. use experiment configs to enable or disable imbalance settings as well as control the imbalance ratio.

--- a/APA first notebook.ipynb
+++ b/APA first notebook.ipynb
@@ -302,6 +302,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e584ae59",
+   "metadata": {},
+   "source": [
+    "trying the tabpfn tuner with autotuning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "29d18f2b",
@@ -2135,26 +2143,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e508571",
+   "metadata": {},
+   "source": [
+    "### Introducing imbalance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
+   "id": "f5b1f213",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def induce_class_imbalance(x, y, imbalance_ratio=0.1, random_state=0):\n",
+    "    \"\"\"\n",
+    "    Downsample the minority class to achieve a given class imbalance.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    x : np.ndarray\n",
+    "        Feature matrix.\n",
+    "    y : np.ndarray\n",
+    "        Target vector (1D, integer or categorical).\n",
+    "    imbalance_ratio : float\n",
+    "        Desired ratio of minority class in the output data (e.g. 0.1 for 10%).\n",
+    "    random_state : int\n",
+    "        Random seed.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    x_new, y_new : np.ndarray\n",
+    "        Feature matrix and labels with induced class imbalance.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Count class occurrences\n",
+    "    unique, counts = np.unique(y, return_counts=True)\n",
+    "    print(f\"[INFO] Class distribution BEFORE imbalance: {dict(zip(unique, counts))}\")\n",
+    "\n",
+    "    # Find majority and minority classes\n",
+    "    class_counts = dict(zip(unique, counts))\n",
+    "    majority_class = unique[np.argmax(counts)]\n",
+    "    minority_class = unique[np.argmin(counts)]\n",
+    "    print(f\"[INFO] Majority class: {majority_class}, Minority class: {minority_class}\")\n",
+    "\n",
+    "    idx_major = np.where(y == majority_class)[0]\n",
+    "    idx_minor = np.where(y == minority_class)[0]\n",
+    "    n_major = len(idx_major)\n",
+    "\n",
+    "    # Calculate how many minority samples to keep\n",
+    "    n_minor_new = int(n_major * imbalance_ratio / (1 - imbalance_ratio))\n",
+    "    n_minor_new = min(len(idx_minor), n_minor_new)\n",
+    "    print(f\"[INFO] Will keep {n_minor_new} of {len(idx_minor)} minority samples (ratio {imbalance_ratio})\")\n",
+    "\n",
+    "    # Randomly sample minority indices\n",
+    "    rng = np.random.RandomState(random_state)\n",
+    "    idx_minor_sampled = rng.choice(idx_minor, size=n_minor_new, replace=False)\n",
+    "\n",
+    "    # Combine indices and shuffle\n",
+    "    idx_combined = np.concatenate([idx_major, idx_minor_sampled])\n",
+    "    rng.shuffle(idx_combined)\n",
+    "\n",
+    "    # Final data\n",
+    "    x_new = x[idx_combined]\n",
+    "    y_new = y[idx_combined]\n",
+    "\n",
+    "    # Print new distribution\n",
+    "    unique_new, counts_new = np.unique(y_new, return_counts=True)\n",
+    "    print(f\"[INFO] Class distribution AFTER imbalance: {dict(zip(unique_new, counts_new))}\")\n",
+    "    print(f\"[INFO] Total samples: {len(y_new)}\\n\")\n",
+    "    return x_new, y_new\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dad77929",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Class distribution BEFORE imbalance: {0: 500, 1: 500}\n",
+      "[INFO] Majority class: 0, Minority class: 0\n",
+      "[INFO] Will keep 55 of 500 minority samples (ratio 0.1)\n",
+      "[INFO] Class distribution AFTER imbalance: {0: 555}\n",
+      "[INFO] Total samples: 555\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.randn(1000, 5)\n",
+    "y = np.array([0]*500 + [1]*500)\n",
+    "\n",
+    "x_imb, y_imb = induce_class_imbalance(x, y, imbalance_ratio=0.1, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c22e9885",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Class distribution BEFORE imbalance: {0: 900, 1: 100}\n",
+      "[INFO] Majority class: 0, Minority class: 1\n",
+      "[INFO] Will keep 47 of 100 minority samples (ratio 0.05)\n",
+      "[INFO] Class distribution AFTER imbalance: {0: 900, 1: 47}\n",
+      "[INFO] Total samples: 947\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.randn(1000, 5)\n",
+    "y = np.array([0]*900 + [1]*100)\n",
+    "\n",
+    "x_imb, y_imb = induce_class_imbalance(x, y, imbalance_ratio=0.05, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "ae0db3da",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([7.66126609e-01, 4.50000000e+01, 2.00000000e+00, 8.02982129e-01,\n",
-       "       9.12000000e+03, 1.30000000e+01, 0.00000000e+00, 6.00000000e+00,\n",
-       "       0.00000000e+00, 2.00000000e+00])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[INFO] Class distribution BEFORE imbalance: {0: 900, 1: 100}\n",
+      "[INFO] Majority class: 0, Minority class: 1\n",
+      "[INFO] Will keep 100 of 100 minority samples (ratio 0.1)\n",
+      "[INFO] Class distribution AFTER imbalance: {0: 900, 1: 100}\n",
+      "[INFO] Total samples: 1000\n",
+      "\n",
+      "Class 0: 900 Class 1: 100\n"
+     ]
     }
    ],
    "source": [
-    "x[0]"
+    "x = np.random.randn(1000, 10)\n",
+    "y = np.array([0]*900 + [1]*100)\n",
+    "x_imb, y_imb = induce_class_imbalance(x, y, imbalance_ratio=0.1)\n",
+    "print('Class 0:', np.sum(y_imb == 0), 'Class 1:', np.sum(y_imb == 1))\n"
    ]
   }
  ],
